--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<article class="personal">
 			<div class="text div-1">
-				<h3 class="h3-text">CÓDIGO</h3>
+				<h3 class="h3-text">DNI</h3>
 				<input class="caja-1" type="text" placeholder="Inserte Código">
 			</div>
 			<div class="text div-2">
@@ -32,7 +32,7 @@
 				<input id="direccion" class="caja cajita-4" type="text" placeholder="Inserte Dirección">
 			</div>
 			<div class="text div-2">
-				<h3 class="h3-text">BÁSICO</h3>
+				<h3 class="h3-text">MONTO</h3>
 				<input id="basico" class="caja cajita-5" type="text" placeholder="Inserte Basico">
 			</div>
 			<input class="caja-foto" type="text" name="">
